// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LegacyPlanBanner /> should render the legacy plan banner 1`] = `
<div>
  <div
    class="legacyExpirationBanner"
  >
    <i
      class="material-icons"
    >
      error
    </i>
    <div
      class="legacyExpirationBannerLabel"
    >
      You are subscribed to a legacy plan. New features are only
                available on our new plans. Reach out to our support team with any questions.
       
      <a
        to="/app/settings/billing/plans"
      >
        <span
          class="plansLink"
        >
          See all new plans.
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`<LegacyPlanBanner /> should render the legacy plan banner 2`] = `
<div>
  <div
    class="legacyExpirationBanner"
  >
    <i
      class="material-icons"
    >
      error
    </i>
    <div
      class="legacyExpirationBannerLabel"
    >
      You are subscribed to a legacy plan. New features are only
                available on our new plans.
       
      <a
        href=""
      >
        Reach out to support
      </a>
    </div>
  </div>
</div>
`;
